# nzi-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  build.rs  check.sh  demo.tape
data/: countries.csv  representative_cities.json
src/: app.rs  config.rs  exchange.rs  main.rs  map.rs  reference.rs  theme.rs  timezone.rs  ui.rs  weather.rs
