[package]
name = "nzi-cli"
version = "0.2.0"
edition = "2024"
description = "New Zealand Around The World - a beautiful TUI connecting NZ to the world"
authors = ["Joseph A Bulbulia"]
license = "MIT"
autobins = false
default-run = "nzi"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"

# Time handling
chrono = "0.4"
chrono-tz = "0.10"

# HTTP client for exchange rates and weather
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
unicode-width = "0.2.0"

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "nzi"
path = "src/main.rs"
